tests/inputs/err_undefined_attr.txt.snap
!!!ERROR!!!

Error {
    kind: UndefinedError,
    name: "err_undefined_attr.txt",
    line: 1,
}

undefined value (in err_undefined_attr.txt:1)
--------------------------- err_undefined_attr.txt ----------------------------
   1 > {{ undefined_value.attr }}
     i    ^^^^^^^^^^^^^^^^^^^^ undefined value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

